# picasso

./: .gitignore  LICENSE  README.md  pyproject.toml  unmixing.py
profiling/: matrix-multiplication.ipynb  shannon-entropy.ipynb
src/picasso/: unmixing.py
